tests/samples/negative/pattern_matching/or_pattern_struct_binding.ax
module or_pattern_struct_binding;

struct Point {
    x: i32;
}

fn main() -> i32 {
    let point = Point { x: 1 };
    return match point {
        Point { x } | _ => 0,
    };
}
